# Outreach

./: LICENSE  README.md  abstractedUI.py  config.json  constants.py  cronlog  intr_test.py  joystick.py  joystick_new.py  main.py  main_new.py  oldmain.py  peltier_control.py  pinsetup.py  pinssetup.sh  setup.txt  start_cam.sh  stepper.py  stepper_new.py  test.py  test1.py  testing.py  uneditiedMain.py
Prints/Big_print/: Downloads - Shortcut.lnk  bearing_holder.stl  motor_holder.stl  motor_main.stl
hardware_interface/: CMakeLists.txt  StepperControl.cpp  StepperControl.h  commands.h  main.cpp  make.sh
